--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "ky": "^0.28.5",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
